[gd_scene load_steps=17 format=3 uid="uid://d1t2dk3gg3mjp"]

[ext_resource type="PackedScene" uid="uid://cbqsxagb7sifd" path="res://dino/player.tscn" id="1_8lrsb"]
[ext_resource type="Script" path="res://Global.gd" id="1_b41ct"]
[ext_resource type="PackedScene" uid="uid://wnr8coiy1ik8" path="res://obstacles/cactus1.tscn" id="3_p7n47"]
[ext_resource type="Script" path="res://Scenes/Camera2D.gd" id="3_y7wpq"]
[ext_resource type="Script" path="res://Scenes/Spawner.gd" id="4_menf8"]
[ext_resource type="Script" path="res://Scenes/ScoreIncreaser.gd" id="5_5vvms"]
[ext_resource type="Script" path="res://Scenes/DeathMenu.gd" id="7_a5moq"]
[ext_resource type="Script" path="res://Scenes/Score Counter.gd" id="8_1cies"]
[ext_resource type="PackedScene" uid="uid://eovx6amd0qvu" path="res://Systems/key_listener.tscn" id="9_rw18p"]
[ext_resource type="Script" path="res://Scenes/highScore.gd" id="10_wwfoy"]
[ext_resource type="Texture2D" uid="uid://cv8upx4pry51a" path="res://ground.png" id="11_2u5ks"]
[ext_resource type="Shader" path="res://Scenes/corridorground.gdshader" id="11_ocr6e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_broki"]
size = Vector2(1442, 20)

[sub_resource type="LabelSettings" id="LabelSettings_gd1cj"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_ojwf6"]
font_size = 14

[sub_resource type="ShaderMaterial" id="ShaderMaterial_132sk"]
shader = ExtResource("11_ocr6e")
shader_parameter/direction = Vector2(1, 0)
shader_parameter/speed_scale = 0.1

[node name="Corridor" type="Node2D"]
script = ExtResource("1_b41ct")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
z_index = -2
position = Vector2(711, 0)
shape = SubResource("RectangleShape2D_broki")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D/CollisionShape2D"]
offset_left = -723.0
offset_top = 5.0
offset_right = 728.0
offset_bottom = 33.0

[node name="Player" parent="." instance=ExtResource("1_8lrsb")]
position = Vector2(29, -29)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(57, -43)
zoom = Vector2(5, 5)
script = ExtResource("3_y7wpq")

[node name="StaticBody2D2" parent="." instance=ExtResource("3_p7n47")]
position = Vector2(592, -20)

[node name="Spawner" type="Timer" parent="."]
process_priority = 1
wait_time = 3.0
script = ExtResource("4_menf8")

[node name="ScoreIncreaser" type="Timer" parent="."]
wait_time = 0.1
script = ExtResource("5_5vvms")

[node name="MenuBar" type="MenuBar" parent="."]
process_mode = 2
visible = false
offset_left = 142.0
offset_top = -139.0
offset_right = 228.0
offset_bottom = -90.0
script = ExtResource("7_a5moq")

[node name="Death" type="Label" parent="MenuBar"]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = 11.0
offset_right = 88.0
offset_bottom = 34.0
text = "Game Over"
horizontal_alignment = 1

[node name="Score Counter" type="Label" parent="."]
texture_filter = 1
offset_left = 292.0
offset_top = -193.0
offset_right = 347.0
offset_bottom = -170.0
text = "00"
label_settings = SubResource("LabelSettings_gd1cj")
horizontal_alignment = 2
script = ExtResource("8_1cies")

[node name="KeyListener" parent="." instance=ExtResource("9_rw18p")]

[node name="highScore" type="Label" parent="."]
texture_filter = 1
offset_left = 170.0
offset_top = -194.0
offset_right = 266.0
offset_bottom = -171.0
text = "00"
label_settings = SubResource("LabelSettings_ojwf6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("10_wwfoy")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
texture_filter = 1
material = SubResource("ShaderMaterial_132sk")
offset_left = -11.0
offset_top = -21.0
offset_right = 2391.0
offset_bottom = 6.0
texture = ExtResource("11_2u5ks")
stretch_mode = 1

[connection signal="startGame" from="." to="Player" method="_on_corridor_start_game"]
[connection signal="startGame" from="." to="Camera2D" method="_on_corridor_start_game"]
[connection signal="startGame" from="." to="Spawner" method="_on_corridor_start_game"]
[connection signal="startGame" from="." to="ScoreIncreaser" method="_on_corridor_start_game"]
[connection signal="death" from="Player" to="." method="_on_player_death"]
[connection signal="death" from="Player" to="Spawner" method="_on_player_death"]
[connection signal="death" from="Player" to="ScoreIncreaser" method="_on_player_death"]
[connection signal="timeout" from="Spawner" to="Spawner" method="_on_timeout"]
[connection signal="timeout" from="ScoreIncreaser" to="ScoreIncreaser" method="_on_timeout"]
[connection signal="restart" from="MenuBar" to="." method="_on_menu_bar_restart"]
[connection signal="restart" from="MenuBar" to="Player" method="_on_menu_bar_restart"]
[connection signal="restart" from="MenuBar" to="Spawner" method="_on_menu_bar_restart"]
[connection signal="restart" from="MenuBar" to="ScoreIncreaser" method="_on_menu_bar_restart"]
[connection signal="keyPressed" from="KeyListener" to="." method="_on_key_listener_key_pressed"]
